[project]
name = "comfyui-run-js"
description = "Manipulate workflow via javascript on node."
version = "1.0.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-run-js"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-run-js"
Icon = ""
